After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758553 - invalid use of gettext (without domain set)
invalid use of gettext (without domain set)
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.46.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-11-23 19:49 UTC by Stanislav Brabec
Modified: 2015-12-16 14:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed fix (732 bytes, patch)
2015-11-23 19:51 UTC, Stanislav Brabec
committed Details | Review

Description Stanislav Brabec 2015-11-23 19:49:01 UTC
While debugging alacarte with watch-gettext tool[1], I found following invalid call of gettext in 2.46.1.

As a result, none of these strings can be translated.


[1] https://github.com/openSUSE/watch-gettext

This happens probably during initialization of GtkButton.

#. [1100] dcgettext()
#: messages:0x7fbd2fda7528
# /usr/lib64/libgio-2.0.so.0(g_resources_enumerate_children+0x50) [0x7fbd2fd0c950]
# /usr/lib64/libgtk-3.so.0(+0x1df022) [0x7fbd2dd74022]
# /usr/lib64/libgtk-3.so.0(+0x1df596) [0x7fbd2dd74596]
msgid "The resource at '%s' does not exist"
msgstr "The resource at '%s' does not exist"


It is apparently caused by including of <gi18n.h> instead of <gi18n-lib.h> in gio/gresource.c.
Comment 1 Stanislav Brabec 2015-11-23 19:51:43 UTC
Created attachment 316117 [details] [review]
proposed fix
Comment 2 Matthias Clasen 2015-11-23 20:21:12 UTC
Review of attachment 316117 [details] [review]:

Yes, looks right.